Fixed wrong font on profile page.

--- a/applications/rmiyc_project/static/css/blank3437728.webflow.css
+++ b/applications/rmiyc_project/static/css/blank3437728.webflow.css
@@ -4,9 +4,9 @@ body {
   clear: none;
   background-color: white;
   opacity: 1;
-  font-family: Arial, Helvetica, sans-serif;
+  /*font-family: Arial, Helvetica, sans-serif; */
   color: #333;
-  font-size: 12px;
+  /*font-size: 12px; */
   line-height: 20px;
 }
 h1 {
